<resources>
    <string name="app_name">ElevatorControlSystemApp</string>
    <string name="number_elev">Number of elevators</string>
    <string name="levels">Number of floors</string>
    <string name="info">The above data will be used to simulate the operation of the elevator control system. After saving the data, a simulation based on randomly generated data will be prepared.</string>
    <string name="command1">Select the number of elevators (1-16)</string>
    <string name="command2">Select the number of floors (5-50)</string>
    <string name="start_top">M 20.7 7 C 21.1 6.6 21.1 6 20.7 5.6 L 18.4 3.3 C 18 2.9 17.4 2.9 17 3.3 L 15.2 5.1 L 19 8.9</string>
    <string name="end_top">M 19.6 8 C 20 7.6 20 7 19.6 6.6 L 17.3 4.3 C 16.9 3.9 16.3 3.9 15.9 4.3 L 14.1 6.1 L 17.9 9.9</string>
    <string name="start">Let\'s get started!</string>
    <string name="psng">Passengers:</string>
    <string name="queue">A queue of floors:</string>
    <string name="sim">SIMULATION STEP</string>
    <string name="main_panel">System operation panel</string>
    <string name="info_sim">The started simulation is based on the randomly generated data presented below.</string>
    <string name="remember">REMEMBER TO SAVE THE CONFIGURATION DATA!</string>
    <string name="saved">CONFIGURATION SAVED</string>
    <string name="state">State:</string>
    <string name="current">Current floor:</string>
    <string name="info_floors">Number of floors in the building for the current system version:</string>
    <string name="up_info"><![CDATA[UP -> The elevator goes up]]></string>
    <string name="down_info"><![CDATA[DOWN -> The elevator goes down]]></string>
    <string name="empty">STANDING</string>
    <string name="up">UP</string>
    <string name="down">DOWN</string>
    <string name="lack">LACK</string>
    <string name="empty_info"><![CDATA[STANDING -> There are no passengers in the elevator]]></string>
    <string name="warn_data">SET UP THE SIMULATION DATA FIRST</string>
    <string name="question">Which floor are you pick up the elevator from?</string>
    <string name="info_sim_end">THE SIMULATION IS FINISHED</string>
    <string name="pickup">Select the level you want to get to.</string>
    <string name="lvl">Choose</string>
    <string name="recommend">Select the target floor</string>
    <string name="wait">No elevator available, wait.</string>
    <string name="lift_info">THE LIFT OPENED, CHOOSE THE DESIRED LEVEL</string>
</resources>