<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcfcfc">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-light"
            android:paddingTop="15dp"
            android:text="@string/main_panel"
            android:textColor="@android:color/white"
            android:textSize="23sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="8dp"
            android:alpha="0.6"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-light"
            android:text="Elevators"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/elevator_card_layout"
            tools:orientation="horizontal">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/simulationButton"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="31dp"
        android:layout_marginTop="237dp"
        android:background="@drawable/simulation_btn"
        android:clickable="true"
        android:elevation="4dp"
        android:foreground="?selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:fontFamily="sans-serif-light"
                android:text="@string/sim"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

            <ImageView
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_play" />

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="440dp"
        android:layout_marginTop="11dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simulationButton">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:alpha="0.25"
            android:background="@android:color/black" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="25dp"
            app:cardCornerRadius="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:paddingHorizontal="15dp"
                    android:text="@string/info_sim"
                    android:textColor="@android:color/black"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/info_floors"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />


                <TextView
                    android:id="@+id/tvFloors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:text="7" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="8dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardFloorPicker"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginHorizontal="25dp"
                tools:visibility="invisible"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:text="@string/question"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <NumberPicker
                        android:id="@+id/pickerFloor"
                        android:layout_width="100dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="6dp">

                        <FrameLayout
                            android:id="@+id/buttonUp"
                            android:layout_width="125dp"
                            android:layout_height="match_parent"
                            android:layout_marginVertical="5dp"
                            android:background="@drawable/start_btn"
                            android:clickable="true"
                            android:elevation="4dp"
                            android:foreground="?selectableItemBackground"
                            app:layout_constraintEnd_toStartOf="@+id/buttonDown"
                            app:layout_constraintStart_toStartOf="parent"
                            tools:layout_editor_absoluteY="5dp">

                            <ImageView
                                android:layout_width="33dp"
                                android:layout_height="33dp"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_up_arrow" />

                        </FrameLayout>

                        <FrameLayout
                            android:id="@+id/buttonDown"
                            android:layout_width="125dp"
                            android:layout_height="match_parent"
                            android:layout_marginVertical="5dp"
                            android:background="@drawable/start_btn"
                            android:clickable="true"
                            android:elevation="4dp"
                            android:foreground="?selectableItemBackground"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/buttonUp"
                            tools:layout_editor_absoluteY="5dp">

                            <ImageView
                                android:layout_width="33dp"
                                android:layout_height="33dp"
                                android:layout_gravity="center"
                                android:layout_marginStart="2dp"
                                android:src="@drawable/ic_down_arrow" />

                        </FrameLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardLevelWant"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginHorizontal="25dp"
                tools:visibility="visible"
                android:visibility="invisible"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:text="@string/recommend"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <NumberPicker
                        android:id="@+id/pickerLevelWant"
                        android:layout_width="100dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <FrameLayout
                            android:id="@+id/buttonChoose"
                            android:layout_width="125dp"
                            android:layout_height="40dp"
                            android:layout_marginVertical="5dp"
                            android:background="@drawable/start_btn"
                            android:clickable="true"
                            android:elevation="4dp"
                            android:foreground="?selectableItemBackground"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:layout_width="33dp"
                                android:layout_height="33dp"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_pick" />

                        </FrameLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/up_info"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/down_info"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/empty_info"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>